# scraping

./: .gitignore  README.md
bs/: README.md  pyproject.toml
bs/src/: main.py
scrapy/: README.md  pyproject.toml
scrapy/scrape_books/scrape_books/: exporters.py
scrapy/scrape_books/scrape_books/spiders/: books.py
scrapy/scrape_books_splash/: scrapy.cfg
scrapy/scrape_books_splash/scrape_books_splash/: exporters.py  items.py  middlewares.py  pipelines.py  settings.py
scrapy/scrape_books_splash/scrape_books_splash/spiders/: books.py
