[tool.poetry]
name = "scraping-bs"
version = "0.1.0"
description = "trying out bs"
authors = ["Nasir Abdulrasheed <mypythtesting@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
httpx = "^0.27.0"

[tool.ruff]
line-length = 89
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
