[tool.poetry]
name = "scrapy-scraping"
version = "0.1.0"
description = "learning scraping with scrapy"
authors = ["Nasir Abdulrasheed <mypythtesting@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
scrapy = "^2.11.2"
scrapy-splash = "^0.9.0"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[tool.ruff]
line-length = 89
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
